<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="empty">No sensors!</string>
    <string name="app_name">My Sensors</string>
    <string name="app_author">Kevin Fodor</string>
    <string name="app_version">v1.4</string>
    <string name="app_about_text">This application is a very simple utility
    which allows you to explore each sensor available on an Android device.
    This is mainly intended to be an instructional and experimental application
    to help facilitate further exploration in application development using
    Android sensors. Each sensor is itemized in a list and when selected
    displays both informational and real-time data as well as the ability to
    search for more information on the selected sensor.\n\nAnyone is free to
    distribute, use and abuse this software as necessary. Enjoy!</string>
    <string name="sensor_name_tag">"Name: "</string>
    <string name="sensor_vendor_tag">"Vendor: "</string>
    <string name="sensor_version_tag">"Version: "</string>
    <string name="sensor_type_tag">"Type: "</string>
    <string name="sensor_power_tag">"Power: "</string>
    <string name="sensor_range_tag">"Range: "</string>
    <string name="sensor_resolution_tag">"Resolution: "</string>
    <string name="sensor_delay_tag">"Event Delay: "</string>
    <string name="sensor_events_tag">"Events: "</string>
    <string name="sensor_timestamp_tag">"Timestamp: "</string>
    <string name="sensor_accuracy_tag">"Accuracy: "</string>
    <string name="sensor_value_format">"%1$s (%2$s) = "</string>
    <string name="sensor_data_format">"d[%1$d] = "</string>
    <string name="sensor_log">"Sensor #%1$d: Type: %2$s hashCode: %3$d '%4$s'\n"</string>
    <string name="sensor_accuracy_changed">"%1$s accuracy changed to %2$s\n"</string>
    <string name="about_tag">&quot;About&#8230;&quot;</string>
    <string name="value_array_tag">d[x] = </string>
    <string name="label_tag">Label = </string>
    <string name="zero_dot_zero">0.0</string>
    <string name="zero_tag">0</string>
    <string name="milliamp_tag">mA</string>
    <string name="units_tag">units</string>
    <string name="change_event_update_rate_menu_tag">Change Rate</string>
    <string name="search_web_tag">&quot;Search Web&#8230;&quot;</string>
    <string name="sensor_details_tag">Sensor Details</string>
    <string name="real_time_data_tag">Real-Time Data</string>
    <string name="reset_sensor_view_menu_tag">Reset Sensor View</string>
    <string name="reset_all_sensor_views_menu_tag">Reset All Sensor Views</string>
    <string name="reset_all_sensor_views_to_defaults_tag">All sensor views RESET to defaults</string>
    <string name="delete_all_sensor_logs_menu_tag">Delete All Sensor Logs</string>
    <string name="delete_all_sensor_logs_defaults_tag">All sensor logs have been deleted</string>
    <string name="rate_change_choice_tag">Choose an event update rate:</string>
    <string name="no_data_tag">No data!</string>
    <string name="sensor_rate_changed_tag">Changed event rate to %1$s</string>
    <string name="sensors_found_tag">Sensors Found</string>
    <string name="unknown_tag">Unknown</string>
    <string name="sensor_num_values_known_tag">"Number of values known: "</string>
    <string name="sensor_num_values_tag">"Number of values shown: "</string>
    <string name="show_all_values_tag">Show All Values</string>
    <string name="log_data_tag">Log to ADB</string>
    <string name="sensor_search_url">"http://www.google.com/search?hl=en&amp;q=%1$s+%2$s+%3$s&amp;btnG=Search&amp;aq=f&amp;aqi=&amp;aql=&amp;oq=&amp;gs_rfai="</string>
    <string name="sensor_values_shown_separator_tag">of</string>
    <string name="rotate_screen_tag">Rotate Screen</string>
    <string name="reset_events_tag">Reset Counter</string>
    <string name="start_events_tag">Start Events</string>
    <string name="stop_events_tag">Stop Events</string>
    <string name="sensor_list_fname">MySensors.txt</string>
    <string name="rewrite_sensor_list_tag">Rewrite Sensor List</string>
    <string name="sensor_log_file_ext">.csv</string>
    <string name="start_logging_tag">Start Logging</string>
    <string name="stop_logging_tag">Stop Logging</string>
    <string name="show_all_log_files_tag">Show All Log Files</string>
    <string name="rescan_tag">Rescan Files</string>
    <string name="sensor_list_created">Sensor list %1$s created</string>
    <string name="no_folder_browser_tag">"You do not have a method installed to browse folders on your device. Install an application such as %1$s or %2$s to browse folders on your device."</string>
    <string name="es_file_explorer_url"><![CDATA[<a href="https://play.google.com/store/apps/details?id=com.estrongs.android.pop">ES File Explorer</a>]]></string>
    <string name="astro_explorer_url"><![CDATA[<a href="https://play.google.com/store/apps/details?id=com.metago.astro">ASTRO File Manager</a>]]></string>
    <string name="log_file_prefix">MySensors</string>
    
</resources>