<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_root" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="10dp">
	<ImageView android:id="@+id/about_image"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginRight="10dp" android:src="@drawable/title_icon" />
	<TextView android:layout_width="wrap_content" android:id="@+id/about_title"
		android:layout_toRightOf="@id/about_image" android:text="@string/app_name"
		android:layout_height="wrap_content" android:textSize="24dip"
		android:textStyle="bold" android:textColor="@color/yellow" />
	<TextView android:layout_width="wrap_content" android:id="@+id/about_author"
		android:layout_toRightOf="@id/about_image" android:text="@string/app_author"
		android:layout_height="wrap_content" android:layout_below="@+id/about_title"
		android:paddingTop="6dip" android:textColor="@color/white" />
	<TextView android:layout_width="wrap_content" android:id="@+id/about_version"
		android:layout_toRightOf="@id/about_image" android:text="@string/app_version"
		android:layout_height="wrap_content" android:layout_below="@+id/about_author"
		android:paddingTop="6dip" />
	<ScrollView android:id="@+id/ScrollViewAbout"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_below="@id/about_image" android:paddingTop="10dip">
		<TextView android:layout_width="wrap_content" android:id="@+id/text"
			android:text="@string/app_about_text" android:layout_height="wrap_content" />
	</ScrollView>
</RelativeLayout>
