<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:scrollbars="vertical">

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:contentDescription="@string/empty"
        android:paddingRight="6dip"
        android:paddingLeft="6dip"
        android:paddingEnd="6dip"
        android:paddingTop="6dip"
        android:scaleType="fitCenter"
        android:src="@drawable/my_sensors_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/number_of_sensors_found_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingRight="6dip"
            android:paddingLeft="6dip"
            android:text="@string/zero_tag"
            android:textColor="@color/yellow"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/number_of_sensors_found_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/number_of_sensors_found_value"
            android:layout_toEndOf="@+id/number_of_sensors_found_value"
            android:text="@string/sensors_found_tag"
            android:textColor="@color/yellow"
            android:textSize="20sp" />
    </RelativeLayout>

    <requestFocus />

    <ListView
        android:id="@+id/sensors"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>